feat(catalog): add service layer tests for createShowtime and bulkGenerateSeats